--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,27 @@
 *, *:before, *:after {
     box-sizing: border-box;
-  }
+}
+
+a {
+  text-decoration: none; /* no underline */
+}
+
+body {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+h1, h2, h3, h4 {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+p {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.banner-title {
+    font-size: 5em;
+}
 
 header {
     display: flex;
@@ -21,7 +42,11 @@ footer {
 }
 
 .navbar {
-    
+    display: flex;
+    align-items: center;
+    border: dashed red;
+    flex-grow: 2;
+    justify-content: space-around;
 }
 
 .banner {
